# checkstake

./: README.md
backend/: .env.example  .gitignore  check-bets.ts  find-active-bet.ts  package-lock.json  package.json  test-existing-bet.ts  test-winner-flexible.ts  test-winner.ts  tsconfig.json
backend/src/: index.ts
backend/src/contracts/: abi.ts  chessBetting.ts
backend/src/routes/: api.ts
backend/src/services/: BlockchainService.ts  GameService.ts
backend/src/sockets/: SocketHandlers.ts
backend/src/types/: game.ts
broadcast/Counter.s.sol/10143/: run-latest.json
broadcast/DeployChessBetting.s.sol/10143/: run-latest.json
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx  provider.tsx
frontend/components/betting/: AvailableBets.tsx  CreateBet.tsx
frontend/components/custom/: ChessBoard.tsx
frontend/components/game/: BettingLobby.tsx  GameDashboard.tsx  GameHeader.tsx  GameStatusCard.tsx  MatchInfoCard.tsx  MoveHistoryCard.tsx  (+2 more)
frontend/hooks/: useChessBetting.ts  useChessGame.ts  useChessGameWithBetting.ts
frontend/lib/: contract.ts  wagmi.ts
monad-blitz-v2/merkle-based-subs/: README.md
monad-blitz-v2/merkle-based-subs/backend/: Cargo.toml
monad-blitz-v2/merkle-based-subs/backend/migrations/: 20240101000000_init_schema.sql
monad-blitz-v2/merkle-based-subs/backend/src/: main.rs
monad-blitz-v2/merkle-based-subs/backend/src/merkle/: ethereum_client.rs  generator.rs  mod.rs  tree.rs
script/: Counter.s.sol  DeployChessBetting.s.sol
src/: Counter.sol
test/: ChessBetting.t.sol  Counter.t.sol
(+3 files in other folders)
