[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
ethers = { version = "2.0.14", features = ["abigen", "ws", "rustls"] }
sha3 = "0.10.8"
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
hex = "0.4"
serde = "1.0.228"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "chrono",
] }
sqlx-cli = "0.8.6"
tokio = { version = "1.48.0", features = ["full"] }
serde_json = "1.0.149"
